--- a/Dota-web-app/package.json
+++ b/Dota-web-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
